--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="app.js"></script>
+
 </head>
 
+
 <body>
+    <nav>
+        <img src="/Images/hear&soulLogo.png" class="logo-position">
+        <div class="topnav" id="myTopnav">
+            <a href="#home" class="active">Home</a>
+            <a href="#news">ABOUT US</a>
+            <a href="#contact">WHAT WE DO</a>
+            <a href="#about">GET INVOLVED</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
+
+
+    </nav>
+    <br>
+    <hr>
+
 
 </body>
 
