--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="app.js"></script>
+
 
 </head>
 
@@ -30,8 +30,36 @@
     </nav>
     <br>
     <hr>
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
 
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="/Images/children.jpg" class="slideshow-images">
+            <div class="text">Caption Text</div>
+        </div>
 
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="/Images/donations.jpg" class="slideshow-images">
+            <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="/Images/salt.jpg" class="slideshow-images">
+            <div class="text">Caption Three</div>
+        </div>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
