modified responsive nav bar for mobile vieweing

--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
 
 <body>
     <nav>
-        <img src="/Images/hear&soulLogo.png" class="logo-position">
+
         <div class="topnav" id="myTopnav">
-            <a href="#home" class="active">Home</a>
+            <img src="/Images/hear&soulLogo.png" class="logo-position">
+            <a href="#home" class="active">HOME</a>
             <a href="#news">ABOUT US</a>
             <a href="#contact">WHAT WE DO</a>
             <a href="#about">GET INVOLVED</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
+
             </a>
+
         </div>
 
 
     </nav>
+
     <br>
     <hr>
     <!-- Slideshow container -->
