added first article, underline on hover, and made nav bar more mobile responsive

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
     <nav>
 
-        <div class="topnav" id="myTopnav">
+        <div class="topnav " id="myTopnav">
             <img src="/Images/hear&soulLogo.png" class="logo-position">
-            <a href="#home" class="active">HOME</a>
-            <a href="#news">ABOUT US</a>
-            <a href="#contact">WHAT WE DO</a>
-            <a href="#about">GET INVOLVED</a>
+            <a href="#home" class="active hover-underline-animation">HOME</a>
+            <a href="#news" class="hover-underline-animation">ABOUT US</a>
+            <a href="#contact" class="hover-underline-animation">WHAT WE DO</a>
+            <a href="#about" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
 
@@ -64,6 +64,78 @@
         <span class="dot"></span>
     </div>
     <script src="app.js"></script>
+
+
+
+
+    <h1 class="article-heading">Lorem ipsumsol aosmodj</h1>
+
+
+
+    <div class="article-1-light-shadow">
+        <img src="/Images/school-kid.jpg" class="article-1-picture">
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 
 </html>
