added first article, more changes to mobile view

--- a/index.html
+++ b/index.html
@@ -68,13 +68,27 @@
 
 
 
-    <h1 class="article-heading">Lorem ipsumsol aosmodj</h1>
+    <h1 class="article-heading">HOW WE HELP CHILDREN</h1>
 
 
 
     <div class="article-1-light-shadow">
+
         <img src="/Images/school-kid.jpg" class="article-1-picture">
+        <h4 class="article-title">Save the children</h4>
+        <p class="article-1-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+            sopdksdo
+            sopdksopdk</p>
+        <p class="article-1-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+            sopdksdo
+            sopdksopdk</p>
+
+
+        <h5 class="article-1-readmore">Read More</h5>
     </div>
+
+
+
 
     <br>
     <br>
