added all the articles

--- a/index.html
+++ b/index.html
@@ -67,86 +67,204 @@
 
 
 
-
-    <h1 class="article-heading">HOW WE HELP CHILDREN</h1>
-
-
-
-    <div class="article-1-light-shadow">
-
-        <img src="/Images/school-kid.jpg" class="article-1-picture">
-        <h4 class="article-title">Save the children</h4>
-        <p class="article-1-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-            sopdksdo
-            sopdksopdk</p>
-        <p class="article-1-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-            sopdksdo
-            sopdksopdk</p>
-
-
-        <h5 class="article-1-readmore">Read More</h5>
-    </div>
+    <main>
+        <h1 class="article-heading">HOW WE HELP CHILDREN</h1>
 
 
 
+        <div class="article-1-light-shadow">
 
+            <img src="/Images/school-kid.jpg" class="article-1-picture">
+            <h4 class="article-title">Save the children</h4>
+            <p class="article-1-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+            <p class="article-1-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+
+
+            <h5 class="article-1-readmore">Read More</h5>
+        </div>
+        <!-- article 2 -->
+
+        <div class="article-2-light-shadow">
+
+            <img src="/Images/school-kid.jpg" class="article-1-picture">
+            <h4 class="article2-title">Save the children</h4>
+            <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+            <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+
+
+            <h5 class="article-2-readmore">Read More</h5>
+        </div>
+
+        <!-- article 3 -->
+
+        <div class="article-3-light-shadow">
+
+            <img src="/Images/school-kid.jpg" class="article-1-picture">
+            <h4 class="article3-title">Save the children</h4>
+            <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+            <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                sopdksdo
+                sopdksopdk</p>
+
+
+            <h5 class="article-3-readmore">Read More</h5>
+
+            <div class="bottom-articles">
+                <!-- article 4 -->
+                <div class="article-4-light-shadow">
+
+                    <img src="/Images/school-kid.jpg" class="article-4-picture">
+                    <h4 class="article-title">Save the children</h4>
+                    <p class="article-4-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                        osdfkdof
+                        sopdksdo
+                        sopdksopdk</p>
+                    <p class="article-4-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                        osdfkdof
+                        sopdksdo
+                        sopdksopdk</p>
+
+
+                    <h5 class="article-4-readmore">Read More</h5>
+                </div>
+                <!-- article 5 -->
+
+                <div class="article-5-light-shadow">
+
+                    <img src="/Images/school-kid.jpg" class="article-5-picture">
+                    <h4 class="article2-title">Save the children</h4>
+                    <p class="article-5-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                        osdfkdof
+                        sopdksdo
+                        sopdksopdk</p>
+                    <p class="article-5-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                        osdfkdof
+                        sopdksdo
+                        sopdksopdk</p>
+
+
+                    <h5 class="article-5-readmore">Read More</h5>
+                </div>
+
+                <!-- article 6 -->
+
+                <div class="article-6-light-shadow">
+
+                    <img src="/Images/school-kid.jpg" class="article-6-picture">
+                    <h4 class="article-6-title">Save the children</h4>
+                    <p class="article-6-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                        osdfkdof
+                        sopdksdo
+                        sopdksopdk</p>
+                    <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                        osdfkdof
+                        sopdksdo
+                        sopdksopdk</p>
+
+
+                    <h5 class="article-6-readmore">Read More</h5>
+
+                </div>
+            </div>
+    </main>
+    <!-- -------------------------------------------------footer -->
+    <footer>
+        <div class="row primary">
+            <div class="column about">
+
+                <h3>Foolish Developer</h3>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+                    voluptatem corporis error non,
+                </p>
+
+                <div class="social">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-youtube-square"></i>
+                    <i class="fa-brands fa-whatsapp-square"></i>
+                </div>
+            </div>
+
+            <div class="column links">
+                <h3>Some Links</h3>
+
+                <ul>
+
+                    <li>
+                        <a href="#faq">F.A.Q</a>
+                    </li>
+                    <li>
+                        <a href="#cookies-policy">Cookies Policy</a>
+                    </li>
+                    <li>
+                        <a href="#terms-of-services">Terms Of Service</a>
+                    </li>
+                    <li>
+                        <a href="#support">Support</a>
+                    </li>
+                </ul>
+
+            </div>
+
+
+            <div class="column links">
+                <h3>Some Links</h3>
+                <ul>
+                    <li>
+                        <a href="#faq">F.A.Q</a>
+                    </li>
+                    <li>
+                        <a href="#cookies-policy">Cookies Policy</a>
+                    </li>
+                    <li>
+                        <a href="#terms-of-services">Terms Of Service</a>
+                    </li>
+                    <li>
+                        <a href="#support">Support</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="column subscribe">
+                <h3>Newsletter</h3>
+                <div>
+                    <input type="email" placeholder="Your email id here" />
+                    <button>Subscribe</button>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="row copyright">
+            <div class="footer-menu">
+
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+                <a href="">Blog</a>
+                <a href="">Social</a>
+
+            </div>
+            <p>Copyright &copy; 2021 Foolish Developer</p>
+        </div>
+    </footer>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
     <br>
     <br>
     <br>
