--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 
 
 </head>
@@ -18,22 +20,19 @@
 
         <div class="topnav " id="myTopnav">
             <img src="/Images/hear&soulLogo.png" class="logo-position">
+
             <a href="#home" class="active hover-underline-animation">HOME</a>
             <a href="#news" class="hover-underline-animation">ABOUT US</a>
             <a href="#contact" class="hover-underline-animation">WHAT WE DO</a>
             <a href="#about" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
-
             </a>
-
+            <hr>
         </div>
-
 
     </nav>
 
-    <br>
-    <hr>
     <!-- Slideshow container -->
     <div class="slideshow-container">
 
@@ -68,206 +67,154 @@
 
 
     <main>
-        <h1 class="article-heading">HOW WE HELP CHILDREN</h1>
+        <d <h1 class="article-heading">HOW WE HELP CHILDREN</h1>
 
 
 
-        <div class="article-1-light-shadow">
+            <div class="article-1-light-shadow">
 
-            <img src="/Images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article-title">Save the children</h4>
-            <p class="article-1-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-1-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-
-
-            <h5 class="article-1-readmore">Read More</h5>
-        </div>
-        <!-- article 2 -->
-
-        <div class="article-2-light-shadow">
-
-            <img src="/Images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article2-title">Save the children</h4>
-            <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-
-
-            <h5 class="article-2-readmore">Read More</h5>
-        </div>
-
-        <!-- article 3 -->
-
-        <div class="article-3-light-shadow">
-
-            <img src="/Images/school-kid.jpg" class="article-1-picture">
-            <h4 class="article3-title">Save the children</h4>
-            <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-            <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
-                sopdksdo
-                sopdksopdk</p>
-
-
-            <h5 class="article-3-readmore">Read More</h5>
-
-            <div class="bottom-articles">
-                <!-- article 4 -->
-                <div class="article-4-light-shadow">
-
-                    <img src="/Images/school-kid.jpg" class="article-4-picture">
-                    <h4 class="article-title">Save the children</h4>
-                    <p class="article-4-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                        osdfkdof
-                        sopdksdo
-                        sopdksopdk</p>
-                    <p class="article-4-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                        osdfkdof
-                        sopdksdo
-                        sopdksopdk</p>
-
-
-                    <h5 class="article-4-readmore">Read More</h5>
-                </div>
-                <!-- article 5 -->
-
-                <div class="article-5-light-shadow">
-
-                    <img src="/Images/school-kid.jpg" class="article-5-picture">
-                    <h4 class="article2-title">Save the children</h4>
-                    <p class="article-5-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                        osdfkdof
-                        sopdksdo
-                        sopdksopdk</p>
-                    <p class="article-5-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                        osdfkdof
-                        sopdksdo
-                        sopdksopdk</p>
-
-
-                    <h5 class="article-5-readmore">Read More</h5>
-                </div>
-
-                <!-- article 6 -->
-
-                <div class="article-6-light-shadow">
-
-                    <img src="/Images/school-kid.jpg" class="article-6-picture">
-                    <h4 class="article-6-title">Save the children</h4>
-                    <p class="article-6-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                        osdfkdof
-                        sopdksdo
-                        sopdksopdk</p>
-                    <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
-                        osdfkdof
-                        sopdksdo
-                        sopdksopdk</p>
-
-
-                    <h5 class="article-6-readmore">Read More</h5>
-
-                </div>
+                <img src="/Images/school-kid.jpg" class="article-1-picture">
+                <h4 class="article-title">FOOD DONATIONS</h4>
+                <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
+                    helping those in need by providing
+                    food support to the children and elderly people in our care. There are many reasons why donating
+                    food
+                    to our organization is a worthwhile and impactful way to give back to your community....</p>
+                <h5 class="article-1-readmore">Read More</h5>
             </div>
+            <!-- article 2 -->
+
+            <div class="article-2-light-shadow">
+
+                <img src="/Images/school-kid.jpg" class="article-1-picture">
+                <h4 class="article2-title">Save the children</h4>
+                <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                    sopdksdo
+                    sopdksopdk</p>
+                <p class="article-2-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                    sopdksdo
+                    sopdksopdk</p>
+
+
+                <h5 class="article-2-readmore">Read More</h5>
+            </div>
+
+            <!-- article 3 -->
+
+            <div class="article-3-light-shadow">
+
+                <img src="/Images/school-kid.jpg" class="article-1-picture">
+                <h4 class="article3-title">Save the children</h4>
+                <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                    sopdksdo
+                    sopdksopdk</p>
+                <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                    sopdksdo
+                    sopdksopdk</p>
+
+
+                <h5 class="article-3-readmore">Read More</h5>
+
+                <div class="bottom-articles">
+                    <!-- article 4 -->
+                    <div class="article-4-light-shadow">
+
+                        <img src="/Images/school-kid.jpg" class="article-4-picture">
+                        <h4 class="article-title">Save the children</h4>
+                        <p class="article-4-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                            osdfkdof
+                            sopdksdo
+                            sopdksopdk</p>
+                        <p class="article-4-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                            osdfkdof
+                            sopdksdo
+                            sopdksopdk</p>
+
+
+                        <h5 class="article-4-readmore">Read More</h5>
+                    </div>
+                    <!-- article 5 -->
+
+                    <div class="article-5-light-shadow">
+
+                        <img src="/Images/school-kid.jpg" class="article-5-picture">
+                        <h4 class="article2-title">Save the children</h4>
+                        <p class="article-5-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                            osdfkdof
+                            sopdksdo
+                            sopdksopdk</p>
+                        <p class="article-5-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                            osdfkdof
+                            sopdksdo
+                            sopdksopdk</p>
+
+
+                        <h5 class="article-5-readmore">Read More</h5>
+                    </div>
+
+                    <!-- article 6 -->
+
+                    <div class="article-6-light-shadow">
+
+                        <img src="/Images/school-kid.jpg" class="article-6-picture">
+                        <h4 class="article-6-title">Save the children</h4>
+                        <p class="article-6-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                            osdfkdof
+                            sopdksdo
+                            sopdksopdk</p>
+                        <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                            osdfkdof
+                            sopdksdo
+                            sopdksopdk</p>
+
+
+                        <h5 class="article-6-readmore">Read More</h5>
+
+                    </div>
+                </div>
     </main>
     <!-- -------------------------------------------------footer -->
+
     <footer>
-        <div class="row primary">
-            <div class="column about">
+        <div class="content">
+            <div class="left box">
+                <div class="topic"><span class="und-footer">Contact U</span>S</div>
+                <p class="und-footer">Address :15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
+                <p class="und-footer">Ph. : +27 72 456 0669</p>
+                <p class="und-footer">Email : opperman.estelle@gmail.com (Estelle Opperman) </p>
 
-                <h3>Foolish Developer</h3>
-
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
-                    voluptatem corporis error non,
-                </p>
-
-                <div class="social">
-                    <i class="fa-brands fa-facebook-square"></i>
-                    <i class="fa-brands fa-instagram-square"></i>
-                    <i class="fa-brands fa-twitter-square"></i>
-                    <i class="fa-brands fa-youtube-square"></i>
-                    <i class="fa-brands fa-whatsapp-square"></i>
-                </div>
-            </div>
-
-            <div class="column links">
-                <h3>Some Links</h3>
-
-                <ul>
-
-                    <li>
-                        <a href="#faq">F.A.Q</a>
-                    </li>
-                    <li>
-                        <a href="#cookies-policy">Cookies Policy</a>
-                    </li>
-                    <li>
-                        <a href="#terms-of-services">Terms Of Service</a>
-                    </li>
-                    <li>
-                        <a href="#support">Support</a>
-                    </li>
-                </ul>
 
             </div>
 
+            <div class="right box">
+                <div class="topic">Email us</div>
+                <form action="https://formspree.io/f/mzboolwv" method="POST">
+                    <label>
+                        <input type="email" placeholder="Enter email address" name="email">
+                    </label>
+                    &nbsp;
+                    <p style="font-size: x-large">Message</p>
 
-            <div class="column links">
-                <h3>Some Links</h3>
-                <ul>
-                    <li>
-                        <a href="#faq">F.A.Q</a>
-                    </li>
-                    <li>
-                        <a href="#cookies-policy">Cookies Policy</a>
-                    </li>
-                    <li>
-                        <a href="#terms-of-services">Terms Of Service</a>
-                    </li>
-                    <li>
-                        <a href="#support">Support</a>
-                    </li>
-                </ul>
+                    <label>
+
+                        <textarea name="message" placeholder=" Write a description..."></textarea>
+                    </label>
+                    <input type="submit" name="submit" value="Send">
+                    <div class="media-icons">
+                        <a href="https://www.facebook.com/heartandsoulcommunitycentre" target="_blank"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/heart_and_soul_foundation_/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+
+                    </div>
+                </form>
             </div>
 
-            <div class="column subscribe">
-                <h3>Newsletter</h3>
-                <div>
-                    <input type="email" placeholder="Your email id here" />
-                    <button>Subscribe</button>
-                </div>
-
-            </div>
 
         </div>
 
-        <div class="row copyright">
-            <div class="footer-menu">
-
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
-                <a href="">Blog</a>
-                <a href="">Social</a>
-
-            </div>
-            <p>Copyright &copy; 2021 Foolish Developer</p>
-        </div>
     </footer>
-    <br>
-    <br>
 
-    <br>
-    <br>
-    <br>
 </body>
 
 </html>
