started adding about us sectiion of the website

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="topnav " id="myTopnav">
             <img src="/Images/hear&soulLogo.png" class="logo-position">
 
-            <a href="#home" class="active hover-underline-animation">HOME</a>
-            <a href="#news" class="hover-underline-animation">ABOUT US</a>
+            <a href="index.html" class="active hover-underline-animation">HOME</a>
+            <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
             <a href="#contact" class="hover-underline-animation">WHAT WE DO</a>
-            <a href="#about" class=" hover-underline-animation">GET INVOLVED</a>
+            <a href="#getinvolved" class=" hover-underline-animation">GET INVOLVED</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -67,7 +67,31 @@
 
 
     <main>
-        <d <h1 class="article-heading">HOW WE HELP CHILDREN</h1>
+
+        <div class="mission-statement-shadow">
+            <img src="/Images/painted_hands_heart.jpg">
+            <h2>Mission Statement</h2>
+            <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
+                children, with the help of our donors and sponsors. To do this in a sustainable manner, we believe in
+                excellent communication, leadership and human relations.</p>
+            <p>Through our different programs we will ensure the growth of individuals, participation, and pride in the
+                community.</p>
+            <p>At the Heart and Soul Foundation, we recognize the significance of providing meals for both our
+                preschool and after-school children, as well as the wider community. Our commitment is to ensure that
+                basic needs are met daily. We are also committed to supporting individuals in their job search,
+                empowering them towards upwards mobility and growth.</p>
+            <p>Our focus will also be on the elderly population in our community, specifically those residing in old age
+                homes. We understand that older individuals face unique challenges and have distinct needs. As such,
+                we will conduct regular evaluations of our programs for the elderly to ensure their specific needs are
+                met effectively.</p>
+            <p>Whenever necessary, professionals from the community will provide counseling services to individuals
+                who require support for issues related to substance abuse, gender-based violence, and family matters</p>
+            <p>Together we will make a difference. </p>
+
+        </div>
+
+
+        <h2 class="article-heading-how-we-help-children">HOW WE HELP CHILDREN</h1>
 
 
 
@@ -179,9 +203,9 @@
         <div class="content">
             <div class="left box">
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
-                <p class="und-footer">Address :15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
+                <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">Email : opperman.estelle@gmail.com (Estelle Opperman) </p>
+                <p class="und-footer">opperman.estelle@gmail.com (Estelle Opperman) </p>
 
 
             </div>
