more information on about us page added icons

--- a/about-us.html
+++ b/about-us.html
@@ -58,6 +58,78 @@
 
         </div>
 
+        <!-- ______________________flex items ___________________________________-->
+
+        <div class="flex-container flex-margin">
+            <div class="flex-item-left">
+                <img src="/Images/flex_images/children-school.png" alt="kindergarten">
+                <h5>Early Childhood Development Centre</h5>
+                <p>The Heart and Soul Foundation has an ECD (Early Childhood Development) center for children between
+                    the ages of 2 and 6. Our main goal is to make sure that all the children currently enrolled are
+                    adequately prepared for school. We aim to meet all their personal, educational, and psychological
+                    needs, as many of them might have experienced trauma at home.</p>
+
+
+            </div>
+            <div class="flex-item-right">
+                <img src="/Images/flex_images/after-care.png" alt="after-care">
+                <h5>Aftercare Centre</h5>
+                <p>The Heart and Soul Foundation has an aftercare center, attended by children that are in primary and
+                    high school. It is vitally important for us that all our children are well looked after and are
+                    assisted in their educational needs to reach their full potential. </p>
+            </div>
+            <div class="flex-item-left">
+                <img src="/Images/flex_images/plate.png" alt="plate">
+                <h5>Feeding Scheme</h5>
+                <p>The Heart and Soul Foundation strives to establish a sit-in soup kitchen that prioritizes nutritious
+                    meals served on a plate at a table. Our goal is to reach a maximum number of individuals facing
+                    hunger, neglect or other difficulties and provide them with assistance through this initiative.</p>
+            </div>
+        </div>
+        <!-- --------------------------------------flex_middle------------------------------ -->
+        <div class="flex-gap">
+
+
+        </div>
+        <h2 class="values">Values</h2>
+        <div class="flex-container flex-margin">
+            <div class="flex-item-left">
+                <img src="/Images/flex_images/engagement.png" alt="engagement">
+                <h5>Engagement</h5>
+                <p>We believe that the only way to successfully bring about change is to engage with the community
+                    consistently and to ensure that all associated with Heart and Soul Foundation have the potential to
+                    reach success.</p>
+            </div>
+            <div class="flex-item-left">
+                <img src="/Images/flex_images/relationships.png" alt="relationships">
+                <h5>Relationships:</h5>
+                <p>We acknowledge that without an honest relationship with our generous sponsors, the relationship with
+                    our beneficiaries would not be possible.</p>
+
+
+            </div>
+            <div class="flex-item-right">
+                <img src="/Images/flex_images/community.png" alt="community">
+                <h5>Transformation:</h5>
+                <p>We continually learn and take strong initiatives to ensure an enduring and fundamental change in our
+                    community. </p>
+
+            </div>
+        </div>
+
+        <!-- <div class="flex-item-left">
+                <img src="/Images/icons8agree.png" alt="agree">
+                <h5>Estate Duty</h5>
+                <p>Where estates are dutiable (estates above R3,500,000) we attend to the necessary calculations.</p>
+            </div>
+            <div class="flex-item-left">
+                <img src="/Images/icons8-agreement-new-50.png" alt="agreem">
+                <h5>Disputed claims</h5>
+                <p>Should you believe claims are not valid we will investigate and follow required legal procedures to
+                    contest the claim against the estate.
+                </p>
+            </div> -->
+
     </main>
     <!-- -------------------------------------------------footer -->
     <div class="footer-gap"></div>
