--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
         <div class="mission-statement-shadow">
             <img src="/Images/painted_hands_heart.jpg">
-            <h2>Mission Statement</h2>
+            <h2><u class="u">Mission Stat</u>ment</h2>
+
             <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
                 children, with the help of our donors and sponsors. To do this in a sustainable manner, we believe in
                 excellent communication, leadership and human relations.</p>
