added first article page

--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
     <nav>
 
         <div class="topnav " id="myTopnav">
-            <img src="/Images/hear&soulLogo.png" class="logo-position">
+            <img src="/images/hear&soulLogo.png" class="logo-position">
 
             <a href="index.html" class="hover-underline-animation">HOME</a>
             <a href="about-us.html" class="active hover-underline-animation">ABOUT US</a>
@@ -40,7 +40,7 @@
 
     <main>
         <div class="about-us-shadow">
-            <img src="/Images/painted_hands_heart.jpg">
+            <img src="/images/painted_hands_heart.jpg">
             <h2>ABOUT US</h2>
             <p>The Heart and Soul Foundation is a registered Non-Profit Company established in 2021 to adress the needs
                 of disadvantaged, underserved, and underprivileged children, and individuals of all ages from Quellerie
@@ -62,7 +62,7 @@
 
         <div class="flex-container flex-margin">
             <div class="flex-item-left">
-                <img src="/Images/flex_images/children-school.png" alt="kindergarten">
+                <img src="/images/flex_images/children-school.png" alt="kindergarten">
                 <h5>Early Childhood Development Centre</h5>
                 <p>The Heart and Soul Foundation has an ECD (Early Childhood Development) center for children between
                     the ages of 2 and 6. Our main goal is to make sure that all the children currently enrolled are
@@ -72,14 +72,14 @@
 
             </div>
             <div class="flex-item-right">
-                <img src="/Images/flex_images/after-care.png" alt="after-care">
+                <img src="/images/flex_images/after-care.png" alt="after-care">
                 <h5>Aftercare Centre</h5>
                 <p>The Heart and Soul Foundation has an aftercare center, attended by children that are in primary and
                     high school. It is vitally important for us that all our children are well looked after and are
                     assisted in their educational needs to reach their full potential. </p>
             </div>
             <div class="flex-item-left">
-                <img src="/Images/flex_images/plate.png" alt="plate">
+                <img src="/images/flex_images/plate.png" alt="plate">
                 <h5>Feeding Scheme</h5>
                 <p>The Heart and Soul Foundation strives to establish a sit-in soup kitchen that prioritizes nutritious
                     meals served on a plate at a table. Our goal is to reach a maximum number of individuals facing
@@ -91,17 +91,17 @@
 
 
         </div>
-        <h2 class="values">Values</h2>
-        <div class="flex-container flex-margin">
+        <h2 class="values"><span class="u">Valu</span>es</h2>
+        <div class="flex-container1 flex-margin1">
             <div class="flex-item-left">
-                <img src="/Images/flex_images/engagement.png" alt="engagement">
+                <img src="/images/flex_images/engagement.png" alt="engagement">
                 <h5>Engagement</h5>
                 <p>We believe that the only way to successfully bring about change is to engage with the community
                     consistently and to ensure that all associated with Heart and Soul Foundation have the potential to
                     reach success.</p>
             </div>
             <div class="flex-item-left">
-                <img src="/Images/flex_images/relationships.png" alt="relationships">
+                <img src="/images/flex_images/relationships.png" alt="relationships">
                 <h5>Relationships:</h5>
                 <p>We acknowledge that without an honest relationship with our generous sponsors, the relationship with
                     our beneficiaries would not be possible.</p>
@@ -109,7 +109,7 @@
 
             </div>
             <div class="flex-item-right">
-                <img src="/Images/flex_images/community.png" alt="community">
+                <img src="/images/flex_images/community.png" alt="community">
                 <h5>Transformation:</h5>
                 <p>We continually learn and take strong initiatives to ensure an enduring and fundamental change in our
                     community. </p>
