--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
 
         <div class="topnav " id="myTopnav">
-            <img src="/Images/hear&soulLogo.png" class="logo-position">
+            <img src="/images/hear&soulLogo.png" class="logo-position">
 
             <a href="index.html" class="active hover-underline-animation">HOME</a>
             <a href="about-us.html" class="hover-underline-animation">ABOUT US</a>
@@ -38,19 +38,19 @@
 
         <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="/Images/children.jpg" class="slideshow-images">
+            <img src="/images/children.jpg" class="slideshow-images">
             <div class="text">Caption Text</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="/Images/donations.jpg" class="slideshow-images">
+            <img src="/images/donations.jpg" class="slideshow-images">
             <div class="text">Caption Two</div>
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="/Images/salt.jpg" class="slideshow-images">
+            <img src="/images/salt.jpg" class="slideshow-images">
             <div class="text">Caption Three</div>
         </div>
 
@@ -69,7 +69,7 @@
     <main>
 
         <div class="mission-statement-shadow">
-            <img src="/Images/painted_hands_heart.jpg">
+            <img src="/images/painted_hands_heart.jpg">
             <h2><u class="u">Mission Stat</u>ment</h2>
 
             <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
@@ -92,27 +92,31 @@
         </div>
 
 
-        <h2 class="article-heading-how-we-help-children">HOW WE HELP CHILDREN</h1>
+        <h2 class="article-heading-how-we-help-children"><span class="u">HOW WE HELP CHIL</span>DREN</h1>
 
 
 
             <div class="article-1-light-shadow">
 
-                <img src="/Images/school-kid.jpg" class="article-1-picture">
+                <img src="/images/school-kid.jpg" class="article-1-picture">
                 <h4 class="article-title">FOOD DONATIONS</h4>
                 <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
                     helping those in need by providing
                     food support to the children and elderly people in our care. There are many reasons why donating
                     food
                     to our organization is a worthwhile and impactful way to give back to your community....</p>
-                <h5 class="article-1-readmore">Read More</h5>
+
+                <h5 class="article-1-readmore"><i>
+                        <a href="food-donations.html" class="link">Read More </a>
+                    </i></h5>
+
             </div>
             <!-- article 2 -->
 
             <div class="article-2-light-shadow">
 
-                <img src="/Images/school-kid.jpg" class="article-1-picture">
-                <h4 class="article2-title">Save the children</h4>
+                <img src="/images/school-kid.jpg" class="article-1-picture">
+                <h4 class="article-title">Save the children</h4>
                 <p class="article-2-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
                     sopdksdo
                     sopdksopdk</p>
@@ -121,30 +125,37 @@
                     sopdksopdk</p>
 
 
-                <h5 class="article-2-readmore">Read More</h5>
+
+                <h5 class="article-1-readmore"><i>
+                        <a href="about-us.html" class="link">Read More </a>
+                    </i></h5>
             </div>
 
             <!-- article 3 -->
 
             <div class="article-3-light-shadow">
 
-                <img src="/Images/school-kid.jpg" class="article-1-picture">
-                <h4 class="article3-title">Save the children</h4>
-                <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                <img src="/images/school-kid.jpg" class="article-1-picture">
+                <h4 class="article-title">Save the children</h4>
+                <p class="article-3-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                    osdfkdof
                     sopdksdo
                     sopdksopdk</p>
-                <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd osdfkdof
+                <p class="article-3-paragraph-2">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
+                    osdfkdof
                     sopdksdo
                     sopdksopdk</p>
 
 
-                <h5 class="article-3-readmore">Read More</h5>
+                <h5 class="article-1-readmore"><i>
+                        <a href="about-us.html" class="link">Read More </a>
+                    </i></h5>
 
                 <div class="bottom-articles">
                     <!-- article 4 -->
                     <div class="article-4-light-shadow">
 
-                        <img src="/Images/school-kid.jpg" class="article-4-picture">
+                        <img src="/images/school-kid.jpg" class="article-4-picture">
                         <h4 class="article-title">Save the children</h4>
                         <p class="article-4-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
                             osdfkdof
@@ -156,14 +167,17 @@
                             sopdksopdk</p>
 
 
-                        <h5 class="article-4-readmore">Read More</h5>
+
+                        <h5 class="article-1-readmore"><i>
+                                <a href="about-us.html" class="link">Read More </a>
+                            </i></h5>
                     </div>
                     <!-- article 5 -->
 
                     <div class="article-5-light-shadow">
 
-                        <img src="/Images/school-kid.jpg" class="article-5-picture">
-                        <h4 class="article2-title">Save the children</h4>
+                        <img src="/images/school-kid.jpg" class="article-5-picture">
+                        <h4 class="article-title">Save the children</h4>
                         <p class="article-5-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
                             osdfkdof
                             sopdksdo
@@ -174,15 +188,18 @@
                             sopdksopdk</p>
 
 
-                        <h5 class="article-5-readmore">Read More</h5>
+
+                        <h5 class="article-1-readmore"><i>
+                                <a href="about-us.html" class="link">Read More </a>
+                            </i></h5>
                     </div>
 
                     <!-- article 6 -->
 
                     <div class="article-6-light-shadow">
 
-                        <img src="/Images/school-kid.jpg" class="article-6-picture">
-                        <h4 class="article-6-title">Save the children</h4>
+                        <img src="/images/school-kid.jpg" class="article-6-picture">
+                        <h4 class="article-title">Save the children</h4>
                         <p class="article-6-paragraph-1">alsojd soijdj soddijsoidj osdijsoijdsio sodijsdiojsd sddsfd
                             osdfkdof
                             sopdksdo
@@ -193,8 +210,10 @@
                             sopdksopdk</p>
 
 
-                        <h5 class="article-6-readmore">Read More</h5>
 
+                        <h5 class="article-1-readmore"><i>
+                                <a href="about-us.html" class="link">Read More </a>
+                            </i></h5>
                     </div>
                 </div>
     </main>
